--- a/src/main/resources/templates/frontEnd/index.html
+++ b/src/main/resources/templates/frontEnd/index.html
@@ -5,7 +5,9 @@
     <title>Photo Website</title>
     <!--    <link rel="stylesheet" th:href="@{css/frontEnd/index.css}">-->
     <link rel="stylesheet" th:href="@{/css/frontEnd/index.css}">
-    <!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
+    <link rel="stylesheet" th:href="@{/css/frontEnd/com/nav.css}">
+    <!--        <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
         /*#carousel-div {*/
@@ -52,18 +54,18 @@
         }
 
 
-        #categories-div{
+        #categories-div {
             display: flex;
             align-items: center;
             flex-direction: column;
         }
 
-        #carouselExampleCaptions{
+        #carouselExampleCaptions {
             WIDTH: 90%;
             MARGIN: 1em auto;
         }
 
-        foot{
+        foot {
             display: flex;
             flex-direction: column;
             height: 3em;
@@ -73,21 +75,11 @@
 
 </head>
 <body>
-<header>
-    <nav>
-        <div id="logo">相簿</div>
-        <button id="hamburger-menu">☰</button>
-        <ul id="nav-menu" class="hidden">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Popular</a></li>
-            <li><a href="#">Categories</a></li>
-            <li><a href="#">About Us</a></li>
-        </ul>
-    </nav>
-    <div id="search-bar">
-        <input type="search" placeholder="搜尋圖片...">
-    </div>
+
+<header th:replace="frontEnd/com/nav :: nav">
+
 </header>
+
 <div id="carousel-div">
 
     <section id="featured-photos" th:replace="frontEnd/indexUntil/carousel :: carousel">
@@ -126,8 +118,8 @@
     <footer>
         <a href="https://github.com/CuttleFish999">DoDoGit</a>
         <p>&copy; 2024 for DoDo</p>
-<!--        <a href="#">Privacy Policy</a>-->
-<!--        <a href="#">Contact</a>-->
+        <!--        <a href="#">Privacy Policy</a>-->
+        <!--        <a href="#">Contact</a>-->
     </footer>
 </div>
 <script th:src="@{/js/frontEnd/index.js}"></script>
