test viewport index

--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -5,33 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>簡易相簿瀏覽網站</title>
     <link rel="stylesheet" th:href="@{/css/frontEnd/com/nav.css}">
+    <link rel="stylesheet" th:href="@{/css/frontEnd/viewport/viewindex.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        body {
-            padding-top: 20px;
-        }
 
-        .card {
-            margin-bottom: 20px;
-        }
-
-        .card-img-top {
-            width: 100%;
-            /*height: 15vw;*/
-            object-fit: cover;
-        }
-
-    /*  RWD  */
-
-         body {
-             padding-top: 20px;
-         }
-
-        .card {
-            margin-bottom: 20px;
-        }
-
-    </style>
 
     </style>
 </head>
