test viewport index

--- a/src/main/resources/templates/frontEnd/com/nav.html
+++ b/src/main/resources/templates/frontEnd/com/nav.html
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="nav justify-content-center"> <!-- 居中導航項目 -->
-                    <a class="nav-link active" href="@{/home}">首頁</a>
+                    <a class="nav-link active" th:href="@{/home}">首頁</a>
                     <a class="nav-link" href="#">上傳照片</a>
-                    <a class="nav-link" href="#">相簿</a>
+                    <a class="nav-link" th:href="@{/test}">相簿</a>
                     <a class="nav-link" href="#">設置</a>
                 </nav>
             </div>
