--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -6,7 +6,8 @@
     <title>簡易相簿瀏覽網站</title>
     <link rel="stylesheet" th:href="@{/css/frontEnd/com/nav.css}">
     <link rel="stylesheet" th:href="@{/css/frontEnd/viewport/viewindex.css}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
 
 
@@ -91,6 +92,6 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
