model Photots add

--- a/src/main/resources/templates/frontEnd/com/nav.html
+++ b/src/main/resources/templates/frontEnd/com/nav.html
@@ -7,6 +7,11 @@
                     <a class="nav-link" href="#">上傳照片</a>
                     <a class="nav-link" th:href="@{/test}">相簿</a>
                     <a class="nav-link" href="#">設置</a>
+
+                    <a class="nav-link" href="#">會員
+                        <img src="https://via.placeholder.com/30x30">
+                    </a>
+
                 </nav>
             </div>
         </div>
