fixed nav.html 相簿 path to viewport

--- a/src/main/resources/templates/frontEnd/com/nav.html
+++ b/src/main/resources/templates/frontEnd/com/nav.html
@@ -5,7 +5,7 @@
                 <nav class="nav justify-content-center"> <!-- 居中導航項目 -->
                     <a class="nav-link active" th:href="@{/home}">首頁</a>
                     <a class="nav-link" href="#">上傳照片</a>
-                    <a class="nav-link" th:href="@{/test}">相簿</a>
+                    <a class="nav-link" th:href="@{/viewport}">相簿</a>
                     <a class="nav-link" href="#">設置</a>
 
                     <a class="nav-link" href="#">會員
