--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" th:href="@{/css/frontEnd/viewport/viewindex.css}">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
     <style>
 
-
-
     </style>
+
 </head>
 <body>
 <header th:replace="frontEnd/com/nav :: nav">
@@ -27,46 +27,7 @@
         </div>
     </div>
     <div class="row">
-
-        <!-- 相簿的卡片 -->
-        <!--                <div class="col-md-4">-->
-        <!--                    <div class="card">-->
-        <!--                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">-->
-        <!--                        <div class="card-body">-->
-        <!--                            <h5 class="card-title">相簿標題</h5>-->
-        <!--                            <p class="card-text">相簿描述。</p>-->
-        <!--                            <a href="#" class="btn btn-primary">查看</a>-->
-        <!--                            <a href="#" class="btn btn-secondary">編輯</a>-->
-        <!--                            <a href="#" class="btn btn-danger">刪除</a>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                &lt;!&ndash; 相簿的卡片 2&ndash;&gt;-->
-        <!--                <div class="col-md-4">-->
-        <!--                    <div class="card">-->
-        <!--                        <div class="img-container">-->
-        <!--                            <img src="https://via.placeholder.com/30x30" class="card-img-top" alt="...">-->
-        <!--                        </div>-->
-        <!--                        <div class="card-body">-->
-        <!--                            <h5 class="card-title" >相簿標題</h5>-->
-        <!--                            <p class="card-text">相簿描述。</p>-->
-        <!--                            <a href="#" class="btn btn-primary">查看</a>-->
-        <!--                            <a href="#" class="btn btn-secondary">編輯</a>-->
-        <!--                            <a href="#" class="btn btn-danger">刪除</a>-->
-        <!--                        </div>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!-- 相簿的卡片 3-->
-        <div th:each="photo : ${photos}">
-            <div class="card-body">
-                <img th:src="@{${photo.thumbnailpath}}">
-                <h5 class="card-title" th:text="${photo.title}">相簿标题</h5>
-                <p class="card-text" th:text="${photo.description}">相簿描述。</p>
-                <a href="#" th:href="@{/photo/view/{id}(id=${photo.photoid})}" class="btn btn-primary">查看</a>
-                <a href="#" th:href="@{/photo/edit/{id}(id=${photo.photoid})}" class="btn btn-secondary">编辑</a>
-                <a href="#" th:href="@{/photo/delete/{id}(id=${photo.photoid})}" class="btn btn-danger">删除</a>
-            </div>
-        </div>
+        <div th:replace="/frontEnd/viewport/viewUntil/photoAlbum.html :: photoAlbum">
 
     </div>
 </div>
