nav.html logging

--- a/src/main/resources/templates/frontEnd/viewport/uploadPhoto.html
+++ b/src/main/resources/templates/frontEnd/viewport/uploadPhoto.html
@@ -63,7 +63,7 @@
 
 <div class="upload-container">
     <div class="upload-btn-wrapper">
-        <button class="btn">Upload a photo</button>
+        <button class="btn">上傳圖片</button>
         <input type="file" id="file-upload" name="myfile" onchange="displayImage(this)" />
     </div>
     <div class="upload-instructions">點選按鈕上傳圖片</div>
