--- a/src/main/resources/templates/frontEnd/com/nav.html
+++ b/src/main/resources/templates/frontEnd/com/nav.html
@@ -8,7 +8,7 @@
                     <a class="nav-link" th:href="@{/viewport}">相簿</a>
                     <a class="nav-link" href="#">設置</a>
 
-                    <a class="nav-link" href="#">會員
+                    <a class="nav-link" th:text="'會員: ' + ${session.loggedInMember.name}" href="#">會員
                         <img src="https://via.placeholder.com/30x30">
                     </a>
 
