--- a/src/main/resources/templates/frontEnd/com/nav.html
+++ b/src/main/resources/templates/frontEnd/com/nav.html
@@ -4,7 +4,7 @@
             <div class="col-md-12">
                 <nav class="nav justify-content-center">
                     <a class="nav-link active" th:href="@{/home}">首頁</a>
-                    <a class="nav-link" href="#">上傳照片</a>
+                    <a class="nav-link" th:href="@{upLoadDate}">上傳照片</a>
                     <a class="nav-link" th:href="@{/viewport}">相簿</a>
                     <a class="nav-link" href="#">設置</a>
 
