--- a/src/main/resources/templates/frontEnd/viewport/uploadPhoto.html
+++ b/src/main/resources/templates/frontEnd/viewport/uploadPhoto.html
@@ -124,25 +124,41 @@
     function confirmUpload() {
         let fileInput = document.getElementById('file-upload');
         let file = fileInput.files[0];
-        let formData = new FormData();
-        formData.append("file", file);
+        let reader = new FileReader();
 
+        reader.onload = function(e) {
+            let base64File = e.target.result;
 
-        $.ajax({
-            url: '/insertPhoto/',
-            type: 'POST',
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function (data) {
-                alert('圖片已成功上傳。');
-                window.location.href = data;
-            },
-            error: function (xhr, status, error) {
-                alert('上傳失敗，請重試。');
-            }
-        });
+            let jsonData = {
+                memberid: 100,
+                title: "範例標題",
+                description: "這是一個照片的範例描述。",
+                filepath: "/image/frontEnd/photo/30x30.png",
+                thumbnailpath: "/image/frontEnd/photo/30x30.png",
+                uploadedat: "2024-02-13 12:00:00",
+                updatedat: "2024-02-13 12:00:00",
+                file: base64File
+            };
+
+            $.ajax({
+                url: 'http://localhost:8080/insertPhoto/',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify(jsonData),
+                success: function (data) {
+                    alert('圖片已成功上傳。');
+                    window.location.href = data;
+                },
+                error: function (xhr, status, error) {
+                    alert('上傳失敗，請重試。');
+                }
+            });
+        };
+
+        // 讀取檔案為Base64
+        reader.readAsDataURL(file);
     }
+
 
 
     function cancelUpload() {
