--- a/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
@@ -2,7 +2,7 @@
 <div th:fragment="photoAlbum">
     <div th:each="photo : ${photos}">
         <div class="card-body">
-            <img th:src="@{${photo.thumbnailpath}}">
+            <img class="product-img" id="avatar" th:src="'data:image/jpeg;base64,' + ${images[__${photo.photoid}__]}" alt="產品圖片"/>
             <h5 class="card-title" th:text="${photo.title}">相簿标题</h5>
             <p class="card-text" th:text="${photo.description}">相簿描述。</p>
             <a href="#" th:href="@{/photo/view/{id}(id=${photo.photoid})}" class="btn btn-primary">查看</a>
@@ -11,6 +11,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- 相簿的卡片 -->
