Corrective pagination disappearance fragment html

--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -27,8 +27,8 @@
         </div>
     </div>
     <div class="row">
-        <div th:replace="/frontEnd/viewport/viewUntil/photoAlbum.html :: photoAlbum">
-
+        <div th:replace="/frontEnd/viewport/viewUntil/photoAlbum.html :: photoAlbum"></div>
+        <nav th:replace="/frontEnd/viewport/viewUntil/page.html :: pagination"></nav>
     </div>
 </div>
 </div>
