--- a/src/main/resources/templates/frontEnd/viewport/viewUntil/page.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewUntil/page.html
@@ -1,5 +1,5 @@
 <!-- Pagination Controls -->
-<nav aria-label="Page navigation">
+<nav th:fragment="pagination" aria-label="Page navigation">
   <ul class="pagination">
     <!-- 上一頁按鈕 -->
     <li th:class="${currentPage == 0} ? 'page-item disabled' : 'page-item'">
