--- a/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
@@ -12,28 +12,28 @@
         </div>
     </div>
 
-    <!-- Pagination Controls -->
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <!-- 上一頁按鈕 -->
-            <li th:class="${currentPage == 0} ? 'page-item disabled' : 'page-item'">
-                <a class="page-link" th:href="@{/viewport(page=${currentPage - 1}, size=${size})}" aria-label="Previous" th:if="${currentPage > 0}">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <!-- 頁碼按鈕 -->
-            <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}" th:class="${i == currentPage} ? 'page-item active' : 'page-item'">
-                <a class="page-link" th:href="@{/viewport(page=${i}, size=${size})}" th:text="${i + 1}">1</a>
-            </li>
-            <!-- 下一頁按鈕 -->
-            <li th:class="${currentPage + 1 >= totalPages} ? 'page-item disabled' : 'page-item'">
-                <a class="page-link" th:href="@{/viewport(page=${currentPage + 1}, size=${size})}" aria-label="Next" th:if="${currentPage + 1 < totalPages}">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</div>
+<!--    &lt;!&ndash; Pagination Controls &ndash;&gt;-->
+<!--    <nav aria-label="Page navigation">-->
+<!--        <ul class="pagination">-->
+<!--            &lt;!&ndash; 上一頁按鈕 &ndash;&gt;-->
+<!--            <li th:class="${currentPage == 0} ? 'page-item disabled' : 'page-item'">-->
+<!--                <a class="page-link" th:href="@{/viewport(page=${currentPage - 1}, size=${size})}" aria-label="Previous" th:if="${currentPage > 0}">-->
+<!--                    <span aria-hidden="true">&laquo;</span>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--            &lt;!&ndash; 頁碼按鈕 &ndash;&gt;-->
+<!--            <li th:each="i : ${#numbers.sequence(0, totalPages - 1)}" th:class="${i == currentPage} ? 'page-item active' : 'page-item'">-->
+<!--                <a class="page-link" th:href="@{/viewport(page=${i}, size=${size})}" th:text="${i + 1}">1</a>-->
+<!--            </li>-->
+<!--            &lt;!&ndash; 下一頁按鈕 &ndash;&gt;-->
+<!--            <li th:class="${currentPage + 1 >= totalPages} ? 'page-item disabled' : 'page-item'">-->
+<!--                <a class="page-link" th:href="@{/viewport(page=${currentPage + 1}, size=${size})}" aria-label="Next" th:if="${currentPage + 1 < totalPages}">-->
+<!--                    <span aria-hidden="true">&raquo;</span>-->
+<!--                </a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    </nav>-->
+<!--</div>-->
 
 
 
