--- a/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewUntil/photoAlbum.html
@@ -11,7 +11,7 @@
             <a href="#" th:href="@{/photo/delete/{id}(id=${photo.photoid})}" class="btn btn-danger">删除</a>
         </div>
     </div>
-
+</div>
 <!--    &lt;!&ndash; Pagination Controls &ndash;&gt;-->
 <!--    <nav aria-label="Page navigation">-->
 <!--        <ul class="pagination">-->
