--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -19,20 +19,20 @@
 
 </header>
 
-<div class="col-md-9">
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="搜索照片">
-        <div class="input-group-append">
-            <button class="btn btn-outline-secondary" type="button">搜索</button>
+    <div class="col-md-9">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="搜索照片">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button">搜索</button>
+            </div>
+        </div>
+        <div class="row">
+            <div th:replace="~{/frontEnd/viewport/viewUntil/photoAlbum.html :: photoAlbum}"></div>
+            <nav th:replace="~{/frontEnd/viewport/viewUntil/pagination.html :: pagination}"></nav>
         </div>
     </div>
-    <div class="row">
-        <div th:replace="/frontEnd/viewport/viewUntil/photoAlbum.html :: photoAlbum"></div>
-        <nav th:replace="/frontEnd/viewport/viewUntil/page.html :: pagination"></nav>
-    </div>
-</div>
-</div>
-</div>
+
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
