--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -10,6 +10,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 
     <style>
+        .fullscreen-img {
+            position: fixed; /* Fixed position */
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            z-index: 9999; /* Make sure it's on top */
+            object-fit: contain; /* Contain the whole image without cropping */
+            background-color: rgba(0,0,0,0.5); /* Semi-transparent background */
+            display: flex;
+            justify-content: center; /* Center image horizontally */
+            align-items: center; /* Center image vertically */
+            overflow: auto; /* Enable scrolling if the image is too big */
+        }
+
 
     </style>
 
@@ -51,7 +68,8 @@
                 type: 'GET',
                 success: function(base64String){
                     // 请求成功，将图片显示在当前卡片体内的<img>标签中
-                    $cardBody.find('.product-img').attr("src", "data:image/jpeg;base64," + base64String);
+                    var $img = $cardBody.find('.product-img').attr("src", "data:image/jpeg;base64," + base64String);
+                    makeImageFullscreen($img); // 调用函数使图片全屏
                 },
                 error: function(){
                     // 请求失败处理
@@ -59,8 +77,34 @@
                 }
             });
         });
+
+        function makeImageFullscreen($img) {
+            // 打开全屏模式
+            if (!$img.hasClass('fullscreen-img')) {
+                $('.fullscreen-img').removeClass('fullscreen-img');
+                $img.addClass('fullscreen-img');
+
+                $('.fullscreen-img').on('click', function(e) {
+                    if (e.target === this) {
+                        exitFullscreen();
+                    }
+                });
+            }
+        }
+
+        // 函数：退出全屏
+        function exitFullscreen() {
+            $('.fullscreen-img').removeClass('fullscreen-img').off('click');
+        }
+
+        $(document).on('keydown', function(e) {
+            if (e.key === "Escape" || e.key === "Backspace") {
+                exitFullscreen();
+            }
+        });
     });
 </script>
+
 
 
 
