--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -34,6 +34,11 @@
             justify-content: center;
             align-items: center;
         }
+
+        .product-img{
+            width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
